--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@headlessui/react": "^1.6.0",
     "@heroicons/react": "^1.0.6",
+    "@next-auth/mongodb-adapter": "^1.0.3",
     "@reduxjs/toolkit": "^1.8.1",
+    "mongodb": "^4.5.0",
     "next": "12.1.5",
+    "next-auth": "^4.3.3",
     "next-redux-wrapper": "^7.0.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
