--- a/package.json
+++ b/package.json
@@ -12,24 +12,22 @@
     "@headlessui/react": "^1.6.0",
     "@heroicons/react": "^1.0.6",
     "@next-auth/mongodb-adapter": "^1.0.3",
-    "@reduxjs/toolkit": "^1.8.1",
     "mongodb": "^4.5.0",
     "next": "12.1.5",
-    "next-auth": "^4.3.3",
-    "next-redux-wrapper": "^7.0.5",
+    "next-auth": "^4.3.4",
     "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-redux": "^8.0.1"
+    "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.0",
     "@types/node": "16.11.30",
     "@types/react": "18.0.8",
-    "@types/react-dom": "18.0.0",
-    "autoprefixer": "^10.4.5",
+    "@types/react-dom": "18.0.3",
+    "autoprefixer": "^10.4.6",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
-    "postcss": "^8.4.12",
+    "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24",
-    "typescript": "4.6.3"
+    "typescript": "4.6.4"
   }
 }
