--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.2.4",
+    "@commitlint/config-conventional": "^16.2.4",
     "@tailwindcss/forms": "^0.5.1",
     "@types/node": "16.11.30",
     "@types/react": "18.0.8",
@@ -26,6 +28,7 @@
     "autoprefixer": "^10.4.7",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.6",
+    "husky": "^7.0.4",
     "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24",
     "typescript": "4.6.4"
