--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.6.1",
     "@heroicons/react": "^1.0.6",
     "@next-auth/mongodb-adapter": "^1.0.3",
+    "@sentry/nextjs": "^6.19.7",
     "mongoose": "^6.3.2",
     "next": "12.1.6",
     "next-auth": "^4.3.4",
