chore(monitoring): update sentry config to hide source maps, add withSentry to interviews/[slug]

--- a/sentry.properties
+++ b/sentry.properties
@@ -1,4 +1,4 @@
 defaults.url=https://sentry.io/
 defaults.org=andrew-s-ns
-defaults.project=nextjs
+defaults.project=interview-mgr
 cli.executable=./node_modules/.bin/sentry-cli
